fix(wisedata): fix app building...