@@ -6,7 +6,7 @@
 
     <groupId>mg.lahatra3</groupId>
     <artifactId>wisedata</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -16,7 +16,8 @@
         <postgresql.version>42.7.3</postgresql.version>
         <mysql.version>9.0.0</mysql.version>
         <lombok.version>1.18.34</lombok.version>
-        <maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>  
+        <maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
+        <appassembler-maven-plugin>2.1.0</appassembler-maven-plugin>
     </properties>
     <dependencies>
         <dependency>
@@ -48,7 +49,7 @@
     </dependencies>
     <build>
         <plugins>
-            <plugin>
+<!--            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>${maven-assembly-plugin.version}</version>
@@ -71,6 +72,50 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>-->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>appassembler-maven-plugin</artifactId>
+                <version>${appassembler-maven-plugin}</version>
+                <configuration>
+                    <extraJvmArguments>
+                        -XX:+IgnoreUnrecognizedVMOptions
+                        --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+                        --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+                        --add-opens=java.base/java.io=ALL-UNNAMED
+                        --add-opens=java.base/java.net=ALL-UNNAMED
+                        --add-opens=java.base/java.nio=ALL-UNNAMED
+                        --add-opens=java.base/java.util=ALL-UNNAMED
+                        --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+                        --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+                        --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+                        --add-opens=java.base/sun.nio.cs=ALL-UNNAMED
+                        --add-opens=java.base/sun.security.action=ALL-UNNAMED
+                        --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+                        --add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED
+                    </extraJvmArguments>
+                    <platforms>
+                        <platform>windows</platform>
+                        <platform>unix</platform>
+                    </platforms>
+                    <programs>
+                        <program>
+                            <mainClass>mg.lahatra3.Wisedata</mainClass>
+                            <id>wisedata_windows</id>
+                            <platforms>
+                                <platform>windows</platform>
+                            </platforms>
+                        </program>
+                        <program>
+                            <mainClass>mg.lahatra3.Wisedata</mainClass>
+                            <id>wisedata_unix</id>
+                            <platforms>
+                                <platform>unix</platform>
+                            </platforms>
+                        </program>
+                    </programs>
+                </configuration>
             </plugin>
         </plugins>
     </build>
